Test Framework Upgrade
Upgraded JUnit from 4.13.2 to 5.8.2
Upgraded Mockito from 1.10.19 to 4.4.0

Reduced the usage of PowerMock (updated from 1.7.4 to 2.0.9) to Whitebox
class, more code must be refactored to avoid such practices.

Replaced legacy JUnit 4 API with modern JUnit 5 API.

Statically importing usages of assertXXX method to reduce boilerplate
code.

Replaced @Test(expected = ...) with new functional API
assertThrows(...).
Replaced some bad usages of assertTrue/False(actual = expected) with
assert[Not]Equals(expected, actual).
Fixed minor typos in some assertXXX messages.
Improved usage of functional syntax whenever possible.
Finalized variables in tests.
Removed unthrown exceptions.
Catching all CVSS medium (4) and onwards vulnerabilities.